--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
+		<meta name= "author"  content="Cynthia Chavez">
+		<meta name="description" content="Amelie Boulangerie is a master of flavor combinations and it shows in her macarons. She ensures her macarons are fresh and of good quality. She also has a variety of options for those with special diatery needs.  ">
 		<title>Amelie Boulangerie</title>
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 		<link href="styles.css" rel="stylesheet">
+
 	</head>
 	<body>
 		<header>
@@ -20,6 +24,8 @@
 			</nav>
 			<main>
 				<h2>Experience the Difference</h2>
+				<img src="cafe-counter.png" alt="cafe-counter">
+					
 				<p>Amelie Boulangerie is the master of flavor combinations. The jewel-colored macarons come in the most tempting of flavors. Experience the difference at Amelie Boulangerie.</p>
 			
 				<ul>
