--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<meta name= "author"  content="Cynthia Chavez">
-		<meta name="description" content="Amelie Boulangerie is a master of flavor combinations and it shows in her macarons. She ensures her macarons are fresh and of good quality. She also has a variety of options for those with special diatery needs.  ">
 		<title>Amelie Boulangerie</title>
-		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+		<meta name="author" content="cynthia chavez">
+		<meta name="description" content="Amelie Boulangerie macarons come in a variety of flavors and colors with wide availability for those with special dietery needs.">
 		<link href="styles.css" rel="stylesheet">
-
+		<link rel="icon" type="image/png" sizes="16x16" href="favicon.ico">
+		
 	</head>
 	<body>
 		<header>
@@ -24,8 +24,7 @@
 			</nav>
 			<main>
 				<h2>Experience the Difference</h2>
-				<img src="cafe-counter.png" alt="cafe-counter">
-					
+				<img src="cafe-counter.jpg" alt="wooden cafe counter">
 				<p>Amelie Boulangerie is the master of flavor combinations. The jewel-colored macarons come in the most tempting of flavors. Experience the difference at Amelie Boulangerie.</p>
 			
 				<ul>
